[gd_scene load_steps=29 format=3 uid="uid://daa1lrnsle1k4"]

[ext_resource type="Script" path="res://second_boss.gd" id="1_klj7i"]
[ext_resource type="Texture2D" uid="uid://bsw4u7mr0k3m5" path="res://assets/animations/zombie/b2/Attack2/Attack2_000.png" id="2_gbp4f"]
[ext_resource type="Texture2D" uid="uid://c0037wqdcjqqw" path="res://assets/animations/zombie/b2/Attack2/Attack2_001.png" id="3_edyjw"]
[ext_resource type="Texture2D" uid="uid://cd25ab3e826tw" path="res://assets/animations/zombie/b2/Attack2/Attack2_002.png" id="4_h1fcp"]
[ext_resource type="PackedScene" uid="uid://dxwulhmvoo0om" path="res://health_component.tscn" id="4_wtrfp"]
[ext_resource type="FontFile" uid="uid://u1vsud4ac057" path="res://fonts/XTypewriter-Regular.ttf" id="5_5cydd"]
[ext_resource type="Texture2D" uid="uid://d0slxgpishv7y" path="res://assets/animations/zombie/b2/Attack2/Attack2_010.png" id="5_b84ks"]
[ext_resource type="Texture2D" uid="uid://nwp2fh7n6lsw" path="res://assets/animations/zombie/b2/Death/Death_000.png" id="6_jvfgw"]
[ext_resource type="Texture2D" uid="uid://7gy3q4soq57a" path="res://assets/animations/zombie/b2/Death/Death_002.png" id="7_mfvc4"]
[ext_resource type="Texture2D" uid="uid://crbcxc03q2hs2" path="res://assets/animations/zombie/b2/Death/Death_003.png" id="8_0kih1"]
[ext_resource type="Texture2D" uid="uid://dst5l4ujg373r" path="res://assets/animations/zombie/b2/Death/Death_004.png" id="9_k5vpm"]
[ext_resource type="Texture2D" uid="uid://koqh1sfcu6e6" path="res://assets/animations/zombie/b2/Death/Death_010.png" id="14_8dd0u"]
[ext_resource type="Texture2D" uid="uid://dhc5s1clxr6kr" path="res://assets/animations/zombie/b2/Death/Death_011.png" id="15_d21kp"]
[ext_resource type="Texture2D" uid="uid://djco6ksudi47d" path="res://assets/animations/zombie/b2/Death/Death_012.png" id="16_sfdns"]
[ext_resource type="Texture2D" uid="uid://cm6jxtje4l8be" path="res://assets/animations/zombie/b2/Death/Death_013.png" id="17_47fyb"]
[ext_resource type="Texture2D" uid="uid://crcv3yvy30tuh" path="res://assets/animations/zombie/b2/Death/Death_014.png" id="18_ipddq"]
[ext_resource type="Texture2D" uid="uid://pbti2igcado5" path="res://assets/animations/zombie/b2/Death/Death_016.png" id="19_suxqo"]
[ext_resource type="Texture2D" uid="uid://bygmbbfvylgu5" path="res://assets/animations/zombie/b2/Walk/Walk_000.png" id="20_j4l4h"]
[ext_resource type="Texture2D" uid="uid://bnlibtvc2i1co" path="res://assets/animations/zombie/b2/Walk/Walk_001.png" id="21_imqf3"]
[ext_resource type="Texture2D" uid="uid://5mjfx4c4sv41" path="res://assets/animations/zombie/b2/Walk/Walk_002.png" id="22_updxr"]
[ext_resource type="Texture2D" uid="uid://cdvtvxo3xnufv" path="res://assets/animations/zombie/b2/Walk/Walk_003.png" id="23_wy1cp"]
[ext_resource type="Texture2D" uid="uid://bj1t8oxse0oaq" path="res://assets/animations/zombie/b2/Walk/Walk_004.png" id="24_iq6lu"]
[ext_resource type="Texture2D" uid="uid://m04kc0ksf0f2" path="res://assets/animations/zombie/b2/Walk/Walk_005.png" id="25_v7ufk"]
[ext_resource type="Texture2D" uid="uid://di2prccy1eale" path="res://assets/animations/zombie/b2/Walk/Walk_006.png" id="26_r1o6l"]
[ext_resource type="Texture2D" uid="uid://bmwwfab3wx6kb" path="res://assets/animations/zombie/b2/Walk/Walk_007.png" id="27_bgehk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bmr2x"]
radius = 18.0

[sub_resource type="SpriteFrames" id="SpriteFrames_rt4yi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gbp4f")
}, {
"duration": 1.0,
"texture": ExtResource("3_edyjw")
}, {
"duration": 1.0,
"texture": ExtResource("4_h1fcp")
}, {
"duration": 1.0,
"texture": ExtResource("5_b84ks")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_jvfgw")
}, {
"duration": 1.0,
"texture": ExtResource("7_mfvc4")
}, {
"duration": 1.0,
"texture": ExtResource("8_0kih1")
}, {
"duration": 1.0,
"texture": ExtResource("9_k5vpm")
}, {
"duration": 1.0,
"texture": ExtResource("14_8dd0u")
}, {
"duration": 1.0,
"texture": ExtResource("15_d21kp")
}, {
"duration": 1.0,
"texture": ExtResource("16_sfdns")
}, {
"duration": 1.0,
"texture": ExtResource("17_47fyb")
}, {
"duration": 1.0,
"texture": ExtResource("18_ipddq")
}, {
"duration": 1.0,
"texture": ExtResource("19_suxqo")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_j4l4h")
}, {
"duration": 1.0,
"texture": ExtResource("21_imqf3")
}, {
"duration": 1.0,
"texture": ExtResource("22_updxr")
}, {
"duration": 1.0,
"texture": ExtResource("23_wy1cp")
}, {
"duration": 1.0,
"texture": ExtResource("24_iq6lu")
}, {
"duration": 1.0,
"texture": ExtResource("25_v7ufk")
}, {
"duration": 1.0,
"texture": ExtResource("26_r1o6l")
}, {
"duration": 1.0,
"texture": ExtResource("27_bgehk")
}],
"loop": true,
"name": &"move",
"speed": 12.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1udai"]
bg_color = Color(0.677819, 0, 0.0572753, 1)

[node name="second_boss" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(3.96, 3.96)
collision_layer = 2
collision_mask = 17
script = ExtResource("1_klj7i")
pointsForKill = 120
const_move_speed = 300
spawn_radius = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
shape = SubResource("CircleShape2D_bmr2x")

[node name="Graphics" type="Node2D" parent="." groups=["Enemy"]]
position = Vector2(5, -17)

[node name="Alive" type="AnimatedSprite2D" parent="Graphics"]
position = Vector2(-4.74747, 18.5152)
rotation = -3.14159
scale = Vector2(0.0370246, 0.0370246)
sprite_frames = SubResource("SpriteFrames_rt4yi")
animation = &"death"
frame = 9
frame_progress = 1.0

[node name="RayCast2D" type="RayCast2D" parent="." groups=["Enemy"]]
target_position = Vector2(0, -200)

[node name="deadLeft" type="Timer" parent="." groups=["Enemy"]]
wait_time = 10.0

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="healthComponent" parent="." groups=["Enemy"] instance=ExtResource("4_wtrfp")]
max_health = 750.0

[node name="hpBar" type="ProgressBar" parent="." groups=["Enemy"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.438596
offset_right = 29.5614
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_5cydd")
theme_override_font_sizes/font_size = 30
theme_override_styles/fill = SubResource("StyleBoxFlat_1udai")
value = 50.0
show_percentage = false

[connection signal="timeout" from="deadLeft" to="." method="_on_dead_left_timeout"]
[connection signal="timeout" from="spawnTimer" to="." method="_on_spawn_timer_timeout"]
